--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -17,37 +17,37 @@ jobs:
 
   deploy_to_development:
     name: "Development Deployment"
-    if: ${{ github.ref != 'ref/heads/main' }}
+    if: ${{ github.ref != 'refs/heads/main' }}
     needs: initial-job
     environment: development
     runs-on: ubuntu-latest
     steps:
     - name: Deploy to Development
-      if: ${{ github.ref != 'ref/heads/main' }}
+      if: ${{ github.ref != 'refs/heads/main' }}
       run: |
         echo "Deploying to Development environment!"
 
   deploy_to_staging:
     name: "Staging Deployment"
-    if: ${{ github.ref == 'ref/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     needs: initial-job
     environment: staging
     runs-on: ubuntu-latest
     steps:
     - name: Deploy to Staging
-      if: ${{ github.ref == 'ref/heads/main' }}
+      if: ${{ github.ref == 'refs/heads/main' }}
       run: |
         echo "Deploying to Staging environment!"
 
   deploy_to_production:
     name: "Production Deployment"
-    if: ${{ github.ref == 'ref/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     needs: initial-job
     environment: production
     runs-on: ubuntu-latest
     steps:
     - name: Deploy to Production
-      if: ${{ github.ref == 'ref/heads/main' }}
+      if: ${{ github.ref == 'refs/heads/main' }}
       run: |
         echo "Deploying to Production environment!"
 
