--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,7 +1,7 @@
 name: Deployment Demo
 on:
   push:
-    branches: [ main ]
+    branches: [ main, test-branch ]
   pull_request:
     branches: [ main ]
 
