--- a/.github/workflows/jira.yml
+++ b/.github/workflows/jira.yml
@@ -7,7 +7,7 @@ jobs:
   jira-lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: cleartax/jira-lint@master
+      - uses: estherk0/jira-lint@master
         name: jira-lint
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
