--- a/.github/workflows/jira.yml
+++ b/.github/workflows/jira.yml
@@ -7,7 +7,7 @@ jobs:
   jira-lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: dsbilling/action-jira-linter@main
+      - uses: SuttonJack/jira-lint@v1.3
         name: jira-lint
         with:
           github-token: ${{ secrets.TOKEN_GA }}
