--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,4 +1,5 @@
-name: Deployment Demo
+name: CD-STAGING
+run-name: "Deploying to ${{ inputs.deploy_target }}"
 on:
   push:
     branches: [ main, test-branch ]
