--- a/.github/workflows/jira.yml
+++ b/.github/workflows/jira.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: SuttonJack/jira-lint@v1.3
+        if: ${{ github.ref != 'refs/heads/main' }}
         name: jira-lint
         with:
           github-token: ${{ secrets.TOKEN_GA }}
@@ -16,3 +17,13 @@ jobs:
           jira-user: syahmi.ahmad@myfave.com
           skip-comments: true
           pr-threshold: 1000
+  initial-job:
+    name: "Initial job"
+    needs:
+      - jira-lint
+    runs-on: ubuntu-latest
+    steps:
+    - name: First step
+      id: init
+      run: |
+        echo "Starting CI/CD demo for ${{ github.repository }}"
