--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,13 +26,11 @@ jobs:
     environment: development
     runs-on: ubuntu-latest
     steps:
-    - name: Which dir
+    - name: Echo secret
+      env:
+        SECRET: ${{ secrets.TEST_SECRET }} 
       run: |
-        ls 
-    
-    - name: Which pwd
-      run: |
-        pwd
+        echo $SECRET
 
     - uses: actions/checkout@v3
       with:
