--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,7 +30,7 @@ jobs:
       env:
         SECRET: ${{ secrets.TEST_SECRET }} 
       run: |
-        echo $SECRET
+        echo "$SECRET"
 
     - uses: actions/checkout@v3
       with:
