--- a/.github/workflows/jira.yml
+++ b/.github/workflows/jira.yml
@@ -1,5 +1,10 @@
 name: TEST
 run-name: "Just testing"
+
+concurrency:
+  group: ${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 on:
   push:
     branches: [ main, test-branch ]
@@ -13,9 +18,8 @@ on:
         required: true
         type: choice
         options:
-          - development
-          - staging
-          - production
+          - fave/production/main
+          - fave/production/maple-next
 
 jobs:
   cd_deploy:
