--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,3 +1,6 @@
+name: CD-DEPLOYMENT
+run-name: "Deploying to ${{ inputs.deploy_target }}"
+
 concurrency:
   group: ${{ github.ref}}
   cancel-in-progress: true
